--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,14 @@ License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat,
+Imports: 
+    dplyr,
+    tidyr,
+    readr,
+    graphics,
+    maps
+Suggests: 
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
